I208 custom filters crud (#220)
* customFilter index controller created

* serializer created, destroy and create controllers created

* put CASCADE deletion on user_id

* routes and swagger done for customfilters
