# backend/src/app/routers/index.ts
@@ -5,6 +5,7 @@ import { router as apiKeyRouter } from './apiKey';
 import { router as userProfileRouter } from './userProfile';
 import { router as authWithApiKeyRouter } from './authorizationWithApiKey';
 import { router as statisticRouter } from './statistic';
+import { router as customFilterRouter } from './customFilter';
 import { Router } from 'express';
 import { router as mailerRouter } from './mailer';
 
@@ -16,3 +17,4 @@ router.use('/api/simulationResult', authWithApiKeyRouter, simulationResultRouter
 router.use('/api/login', loginRouter);
 router.use('/api/apiKey', apiKeyRouter);
 router.use('/api/statistic', statisticRouter);
+router.use('/api/customFilter', customFilterRouter);
